# release-automation

./: .release-please-manifest.json  README.md  release-please-config.json
.github/workflows/: ci.yaml
libs/blackwolf/: CHANGELOG.md  README.md  app.py  pyproject.toml
libs/nightwolf/: CHANGELOG.md  README.md  app.py  pyproject.toml
libs/whitewolf/: README.md  pyproject.toml
