[tool.poetry]
name = "blackwolf"
# x-release-please-start-version
version = "1.0.0"
# x-release-please-end
description = "A black wolf is a melanistic colour variant of the gray wolf (Canis lupus)"
authors = ["michaelact <86778470+michaelact@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
